Un solo socket para sensorica

--- a/Robocol/testapp/src/app/rover/sensorica/sensorica.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/sensorica.component.html
@@ -9,12 +9,12 @@
 		<!-- COLUMN 2 -->
 		<!-- <div class="col py-1 px-sm-1 align-self-start"> -->
 		<div class="col-sm-3">
-			<app-eva></app-eva>
+			<app-eva [sensoricaSocket]="sensoricaSocket"></app-eva>
 		</div>
 		<!-- COLUMN 3 -->
 		<!-- <div class="col py-1 px-xl-1 align-self-start"> -->
 		<div class="col-sm-4">
-			<app-tabs></app-tabs>
+			<app-tabs [sensoricaSocket]="sensoricaSocket"></app-tabs>
 		</div>
 	</div>
 </div>
