--- a/Robocol/testapp/src/app/rover/sensorica/tabs/tabs.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/tabs/tabs.component.html
@@ -39,7 +39,7 @@
                   <div class="col">
                     <div class="card-transparent">
                       <div class="card-body">
-                        <app-measurements></app-measurements>
+                        <app-measurements [sensoricaSocket]="sensoricaSocket"></app-measurements>
                       </div>
                     </div>
                   </div>
