delete cameras for testing

--- a/Robocol/testapp/src/app/rover/estado/live/live.component.html
+++ b/Robocol/testapp/src/app/rover/estado/live/live.component.html
@@ -1,4 +1,4 @@
-<video #video class="vid" autoplay></video>
+<!--<video #video class="vid" autoplay></video>-->
 <!-- <div class="card border-warning bg-transparent text-center ml-1 mr-1">
   <div class="card-body bg-black mt-2 pt-0">
 		<div class="container-fluid px-lg-0">
