--- a/Robocol/testapp/src/app/rover/sensorica/live/live.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/live/live.component.html
@@ -59,7 +59,7 @@
 				<div class="col">
 					<div class="d-flex flex-column align-items-center">
 						<div class="p-1">
-							<video #video2 class="vid" autoplay></video>
+							<!--<video #video2 class="vid" autoplay></video>-->
 						</div>
 						<!-- <div class="pb-2">
 						<button class="btn btn-primary" (click)="capture()">Capture Image</button>
