--- a/Robocol/testapp/src/app/rover/traccion/traccion-piloto/traccion-piloto.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/traccion-piloto/traccion-piloto.component.html
@@ -4,7 +4,7 @@
           <div class="col col-lg-6">
              <div class="d-flex card rounded-0 border-warning bg-transparent justify-content-center align-items-center text-center">
                 <div class="d-flex align-items-center card-body bg-black justify-content-center align-items-center text-center">
-                    <app-traccion-live></app-traccion-live>
+                    <!--<app-traccion-live></app-traccion-live>-->
                 </div>
              </div>
           </div>
