test to see if all receive messages

--- a/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="col card border-warning bg-transparent text-center">
-        <!--<app-live></app-live>-->
+        <app-live></app-live>
       </div>
     </div>
   </div>
