new visual changes in arm

--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-horizontal/brazo-cinematica-inversa-horizontal.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-horizontal/brazo-cinematica-inversa-horizontal.component.html
@@ -20,7 +20,7 @@
                   >
                     <button
                       class="btn btn-default btn-block"
-                      (mousedown)="change_value(imageButtons[2], 'front')"
+                      (mousedown)="change_value(imageButtons[2], 'forward')"
                       (mouseup)="stop_changing_value()"
                     >
                       FRONT
@@ -60,7 +60,7 @@
                   >
                     <button
                       class="btn btn-default btn-block"
-                      (mousedown)="change_value(imageButtons[1], 'back')"
+                      (mousedown)="change_value(imageButtons[1], 'backward')"
                       (mouseup)="stop_changing_value()"
                     >
                       BACK
