--- a/Robocol/testapp/src/app/rover/brazo/brazo-gripper/brazo-gripper.component.css
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-gripper/brazo-gripper.component.css
@@ -1,11 +1,11 @@
 h6 {
   color: #e4b503;
-  width: 100%;
   margin-bottom: 2rem;
+  width: 100%;
 }
 
 select {
-  width: 100%;
+  width: auto;
   padding: 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
