--- a/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
@@ -17,21 +17,27 @@
          </div>
       </div>
       <div class="d-flex card rounded-0 border-warning bg-transparent justify-content-center align-items-center text-center tarjetaControl" style="display: flex;">
-         <div class="d-flex align-items-center card-body bg-black justify-content-around cuerpoTarjetaControl" style="display: flex;">
-            <div class="d-flex justify-content-center align-items-center text-center rotacion">
-               <app-brazo-cinematica-directa [brazoService]="brazoService"></app-brazo-cinematica-directa>
+         <div class="d-flex justify-content-around align-items-center card-body bg-black">
+            <div class="d-flex justify-content-center align-items-center text-center horizontal">
+               <app-brazo-motores [brazoService]="brazoService"></app-brazo-motores>
             </div>
-            <div class="d-flex justify-content-center align-items-center text-center rotacion">
-               <app-brazo-cinematica-inversa-rotacion [brazoService]="brazoService"></app-brazo-cinematica-inversa-rotacion>
+            <div class="d-flex justify-content-center align-items-center text-center horizontal">
+               <app-brazo-acciones [brazoService]="brazoService"></app-brazo-acciones>
+            </div>
+            <div class="d-flex justify-content-center align-items-center text-center horizontal">
+               <app-brazo-posiciones [brazoService]="brazoService"></app-brazo-posiciones>
+            </div>
+            <div class="d-flex justify-content-center align-items-center text-center horizontal">
+               <app-brazo-gripper [brazoService]="brazoService"></app-brazo-gripper>
+            </div>
+            <div class="d-flex justify-content-center align-items-center text-center horizontal">
+               <app-sistema-extraccion-b [brazoService]="brazoService"></app-sistema-extraccion-b>
             </div>
             <div class="d-flex justify-content-center align-items-center text-center vertical">
                <app-brazo-cinematica-inversa-vertical [brazoService]="brazoService"></app-brazo-cinematica-inversa-vertical>
             </div>
             <div class="d-flex justify-content-center align-items-center text-center horizontal">
                <app-brazo-cinematica-inversa-horizontal [brazoService]="brazoService"></app-brazo-cinematica-inversa-horizontal>
-            </div>
-            <div class="d-flex justify-content-center align-items-center text-center horizontal" style="margin-right: 2rem;">
-               <app-sistema-extraccion-b [brazoService]="brazoService"></app-sistema-extraccion-b>
             </div>
          </div>
       </div>
