--- a/Robocol/testapp/src/app/rover/brazo/sistema-extraccion-b/sistema-extraccion-b.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/sistema-extraccion-b/sistema-extraccion-b.component.html
@@ -1,13 +1,13 @@
 <div>
-    <h6 class="justify-content-center align-items-center text-center">SISTEMA DE EXTRACCIÓN B</h6>
+    <h6 class="justify-content-center align-items-center text-center">EXTRACTION SYSTEM B </h6>
     <div class="col">
-        <select class="justify-content-center align-items-center text-center" id="command" name="command" required
-            #command style="margin-bottom: 1.5rem;">
+        <select class="justify-content-center align-items-center text-center" id="command_sistema_extraccion_b" name="command_sistema_extraccion_b" required
+            #command_sistema_extraccion_b style="margin-bottom: 1.5rem;">
             <option value=1>VB</option>
             <option value=2>GA</option>
             <option value=3>GC</option>
         </select>
-        <input (click)="send_selection()" class="justify-content-center align-items-center text-center" type="submit"
-            value="Enviar" />
+        <input (click)="send_selection_sistema_extraccion_b()" class="justify-content-center align-items-center text-center" type="submit"
+            value="Send" />
     </div>
 </div>
