--- a/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
@@ -75,10 +75,10 @@
             {{item.nombre}} </p>
           <p class="descripcionBateriaNumeros" style="font-size:xx-small;color: rgba(228, 181, 3, 1)">{{item.voltios}} V
           </p>
-          {% comment %} <p class="descripcionBateriaNumeros" style="font-size:xx-small;color: rgba(228, 181, 3, 1)">{{item.amperios}}
+          <!-- <p class="descripcionBateriaNumeros" style="font-size:xx-small;color: rgba(228, 181, 3, 1)">{{item.amperios}}
             A </p>
           <p class="descripcionBateriaNumeros" style="font-size:xx-small;color: rgba(228, 181, 3, 1)">{{item.corriente}}
-            C </p> {% endcomment %}
+            C </p>-->
         </div>
       </div>
     </div>
