--- a/Robocol/testapp/src/app/rover/brazo/brazo-acciones/brazo-acciones.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-acciones/brazo-acciones.component.html
@@ -5,7 +5,7 @@
             value="ABORT" />
         <input (click)="send_actions('retry')" class="justify-content-center align-items-center text-center retry" type="submit"
             value="RETRY" />
-        <input (click)="send_actions('stop')" class="justify-content-center align-items-center text-center stop" type="submit"
+        <input (click)="send_actions('stop_total')" class="justify-content-center align-items-center text-center stop" type="submit"
             value="STOP" />
     </div>
 </div>
