--- a/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
@@ -14,7 +14,7 @@
 					<div class="col col-sm-4">
 						<div class="categories">
 							<pre><b>Temperature:</b></pre>
-							<pre><b>PH:</b></pre>
+							<pre><b>Celda de carga:</b></pre>
 							<pre><b>CO:</b></pre>
 							<pre><b>Humidity:</b></pre>
 						</div>
