--- a/Robocol/testapp/src/app/rover/traccion/traccion-live/traccion-live.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/traccion-live/traccion-live.component.html
@@ -5,7 +5,7 @@
         <div class="col">
           <div class="d-flex flex-column align-items-center">
             <div class="p-1">
-              <video #video class="vid" autoplay></video>
+              <img class="img-responsive" src="http://192168:8080/stream?topic=/cam5">
             </div>
           </div>
         </div>
