--- a/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.css
+++ b/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.css
@@ -142,3 +142,19 @@ input
 	border: none;
 	background: none;
 }
+input[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+  width: 100%;
+}
+
+input[type="number"] {
+  width: inherit;
+  margin-bottom: 1.5rem;
+  color: white;
+}
