--- a/Robocol/testapp/src/app/rover/sensorica/live/live.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/live/live.component.html
@@ -24,12 +24,11 @@
 						<div class="p-1">
 							<img class="img-responsive" src="http://192.168.1.106:8080/stream?topic=/cam1">
 						</div>
-						<!-- <div class="pb-2">
-							<button class="btn btn-primary" (click)="capture()">Capture Image</button>
-						</div> -->
-						<!-- <div class="p-1">
-							<canvas #canvas class="vid"></canvas>
-						</div> -->
+					</div>
+					<div class="d-flex flex-column align-items-center">
+						<div class="p-1">
+							<img class="img-responsive" src="http://192.168.1.106:8080/stream?topic=/cam2">
+						</div>
 					</div>
 
 
