--- a/Robocol/testapp/src/app/rover/traccion/traccion-joystick/traccion-joystick.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/traccion-joystick/traccion-joystick.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-6">
     <ngx-joystick
       #staticJoystic
@@ -44,4 +44,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
