--- a/Robocol/testapp/src/app/submarino/navegacion/vertical/vertical.component.html
+++ b/Robocol/testapp/src/app/submarino/navegacion/vertical/vertical.component.html
@@ -2,33 +2,36 @@
   <tbody>
     <tr class="justify-content-center text-center align-middle">
       <td class="justify-content-center text-center align-middle">
-        <div class="img-wrapper">
-          <img class="img-responsive" src="{{ imageSrc }}" />
-          <div class="img-overlay">
+        <div>
             <table
               class="table table-borderless"
               style="height: 100%; background-color: transparent"
             >
               <tbody>
                 <tr class="justify-content-center text-center align-middle">
+
                   <td
                     class="td justify-content-center text-center align-middle"
+                    class="img-wrapper"
                   >
+                  <img class="img-responsive" src="{{ imageSrcU }}" />
                     <button
                       class="btn btn-default btn-block"
-                      (mousedown)="change_value(imageButtons[1], 'up')"
-                      (mouseup)="stop_changing_value()"
+                      (mousedown)="change_valueU(imageButtonsU[1], 'up')"
+                      (mouseup)="stop_changing_valueU()"
                     >
                       UP
                     </button>
                   </td>
                   <td
                     class="td justify-content-center text-center align-middle"
+                    class="img-wrapper"
                   >
+                  <img class="img-responsive" src="{{ imageSrcD }}" />
                     <button
                       class="btn btn-default btn-block"
-                      (mousedown)="change_value(imageButtons[2], 'down')"
-                      (mouseup)="stop_changing_value()"
+                      (mousedown)="change_valueD(imageButtonsD[1], 'down')"
+                      (mouseup)="stop_changing_valueD()"
                     >
                       DOWN
                     </button>
@@ -36,7 +39,6 @@
                 </tr>
               </tbody>
             </table>
-          </div>
         </div>
       </td>
     </tr>
