Listo prueba sub

--- a/Robocol/testapp/src/app/submarino/navegacion/horizontal/horizontal.component.html
+++ b/Robocol/testapp/src/app/submarino/navegacion/horizontal/horizontal.component.html
@@ -20,7 +20,7 @@
                     >
                       <button
                         class="btn btn-default btn-block"
-                        (mousedown)="change_value(imageButtons[2], 'forward')"
+                        (mousedown)="change_value(imageButtons[2], 'Forward')"
                         (mouseup)="stop_changing_value()"
                       >
                         FRONT
@@ -34,7 +34,7 @@
                     >
                       <button
                         class="btn btn-default btn-block"
-                        (mousedown)="change_value(imageButtons[3], 'left')"
+                        (mousedown)="change_value(imageButtons[3], 'LeftTurn')"
                         (mouseup)="stop_changing_value()"
                       >
                         LEFT
@@ -46,7 +46,7 @@
                     >
                       <button
                         class="btn btn-default btn-block"
-                        (mousedown)="change_value(imageButtons[4], 'right')"
+                        (mousedown)="change_value(imageButtons[4], 'RightTurn')"
                         (mouseup)="stop_changing_value()"
                       >
                         RIGHT
@@ -60,7 +60,7 @@
                     >
                       <button
                         class="btn btn-default btn-block"
-                        (mousedown)="change_value(imageButtons[1], 'backward')"
+                        (mousedown)="change_value(imageButtons[1], 'Backward')"
                         (mouseup)="stop_changing_value()"
                       >
                         BACK
