--- a/Robocol/testapp/src/app/submarino/navegacion/vertical/vertical.component.html
+++ b/Robocol/testapp/src/app/submarino/navegacion/vertical/vertical.component.html
@@ -14,10 +14,10 @@
                     class="td justify-content-center text-center align-middle"
                     class="img-wrapper"
                   >
-                  <img class="img-responsive" src="{{ imageSrcU }}" />
+                  <!-- <img class="img-responsive" src="{{ imageSrcU }}" /> -->
                     <button
                       class="btn btn-default btn-block"
-                      (mousedown)="change_valueU(imageButtonsU[1], 'up')"
+                      (mousedown)="change_valueU(imageButtonsU[1], 'Up')"
                       (mouseup)="stop_changing_valueU()"
                     >
                       UP
@@ -27,10 +27,10 @@
                     class="td justify-content-center text-center align-middle"
                     class="img-wrapper"
                   >
-                  <img class="img-responsive" src="{{ imageSrcD }}" />
+                  <!-- <img class="img-responsive" src="{{ imageSrcD }}" /> -->
                     <button
                       class="btn btn-default btn-block"
-                      (mousedown)="change_valueD(imageButtonsD[1], 'down')"
+                      (mousedown)="change_valueD(imageButtonsD[1], 'Down')"
                       (mouseup)="stop_changing_valueD()"
                     >
                       DOWN
