--- a/Robocol/testapp/src/app/submarino/navegacion/navegacion.component.html
+++ b/Robocol/testapp/src/app/submarino/navegacion/navegacion.component.html
@@ -1,8 +1,7 @@
 
 <div class="row">
   <div class="column ccamera">
-    <!-- Camera -->
-    Camera goes here
+    <img class="img-responsive" src="http://192.168.1.106:8080/stream?topic=/cam1">
   </div>
   <div class="column cpanel">
     <!-- Panel -->
@@ -11,22 +10,25 @@
         <tr class="justify-content-center text-center align-middle">
           <!-- Panel-Abort -->
           <div class="img-wrapper">
-            <img class="img-responsive" src="../../../../src/static/assets/Submarino/abort.png" />
+            <!-- <img class="img-responsive" src="../../../static/assets/Submarino/abort.png" /> -->
             <button
             class="btn btn-default btn-block"
             (mousedown)="abort()"
-            >
+            > ABORT
             </button>
           </div>
         </tr>
         <tr class="justify-content-center text-center align-middle">
-          <app-horizontal></app-horizontal>
+          <app-horizontal [navegacionService]="navegacionService"></app-horizontal>
         </tr>
         <tr class="justify-content-center text-center align-middle">
-          <app-vertical></app-vertical>
+          <app-vertical [navegacionService]="navegacionService"></app-vertical>
         </tr>
         <tr class="justify-content-center text-center align-middle">
-          <app-roll-pitch></app-roll-pitch>
+          <app-roll-pitch [navegacionService]="navegacionService"></app-roll-pitch>
+        </tr>
+        <tr class="justify-content-center text-center align-middle">
+          <app-potencia [navegacionService]="navegacionService"></app-potencia>
         </tr>
       </tbody>
     </table>
